travis: coverage test w/ multiprocessing + coverage combine

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,10 +62,10 @@ script:
     - ls $HOME
     - ls $HOME/astrometry.net
     - (cd doc && make)
-    - (cd py && coverage run test/runbrick_test.py travis psfex ceres && coverage run -a test/unit_tests.py)
+    - (cd py && coverage run --concurrency=multiprocessing test/runbrick_test.py travis psfex ceres && coverage run --concurrency=multiprocessing -a test/unit_tests.py && coverage combine)
 
 after_success:
-    - (cd py && coveralls debug)
+    #- (cd py && coveralls debug)
     - (cd py && coveralls)
     - (cd py && ./codecov-upload.sh)
 
