--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 # Travis-CI.org build script
 
-# Default environment is Ubuntu 12.04.5 LTS "precise"
-# which is pretty old.
+# Default: "precise" is Ubuntu 12.04.5 LTS which is pretty old.
 # "trusty" is Ubuntu 14.04 LTS
-#dist: trusty
 # "xenial" is Ubuntu 16.04 LTS
-#dist: xenial
 # "bionic" is Ubuntu 18.04 LTS
 dist: bionic
 
@@ -22,7 +19,6 @@ python:
 
 install:
     # ubuntu's source extractor package renames the executable.
-    #- mkdir ~/bin # exists
     - ln -s /usr/bin/sextractor ~/bin/sex
     - export PATH=${PATH}:~/bin
     - pip install Sphinx
@@ -36,8 +32,7 @@ install:
     - pip install astropy
     - pip install photutils
     - pip install coveralls
-    - pip install fitsio==1.1.1
-    #- pip install --no-deps --upgrade git+https://github.com/esheldon/fitsio.git@v0.9.12#egg=fitsio
+    - pip install fitsio==1.1.2
     #- pip install -v --no-deps --upgrade git+https://github.com/dstndstn/tractor.git@cython
     - pip install cython
     - git clone https://github.com/dstndstn/tractor.git
@@ -47,9 +42,7 @@ before_script:
     - if [ ! -d "$HOME/astrometry.net" ]; then (cd $HOME; git clone https://github.com/dstndstn/astrometry.net.git); fi
     - (cd $HOME/astrometry.net && git pull) || (rm -Rf $HOME/astrometry.net && cd $HOME && git clone https://github.com/dstndstn/astrometry.net.git);
     - (cd $HOME/astrometry.net && make && make py)
-
     - (cd $HOME && git clone https://github.com/legacysurvey/unwise_psf.git && cd unwise_psf && git checkout dr9.3)
-
     - mkdir -p $HOME/dust/maps
     - (cd $HOME/dust/maps && wget -c http://portal.nersc.gov/project/cosmo/temp/dstn/travis-ci/maps/SFD_dust_4096_ngp.fits)
     - (cd $HOME/dust/maps && wget -c http://portal.nersc.gov/project/cosmo/temp/dstn/travis-ci/maps/SFD_dust_4096_sgp.fits)
@@ -64,7 +57,6 @@ script:
     - (cd py && coverage run --concurrency=multiprocessing test/runbrick_test.py psfex ceres && coverage run --concurrency=multiprocessing -a test/unit_tests.py && coverage combine)
 
 after_success:
-    #- (cd py && coveralls debug)
     - (cd py && coveralls)
     - (cd py && ./codecov-upload.sh)
 
