--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ python:
   - "3.6"
   - "3.7"
   - "3.8"
-  - "3.9-dev"
+# scipy doesn't build
+#  - "3.9-dev"
+#  - "nightly"
 
 install:
     - python --version
