--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run:
          name: Pip packages
          command: |
-            for x in setuptools wheel intel-numpy intel-scipy psycopg2-binary fitsio matplotlib astropy photutils zmq cython; do pip3 install $x; done
+            for x in setuptools wheel intel-numpy intel-scipy psycopg2-binary fitsio matplotlib astropy photutils==1.0.0 zmq cython; do pip3 install $x; done
             rm -Rf /root/.cache/pip
       - run:
           name: Dust maps
