--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,12 @@ jobs:
       - run:
          name: Pip packages
          command: |
-            for x in setuptools wheel intel-numpy intel-scipy psycopg2-binary fitsio==1.1.1 matplotlib astropy photutils==1.0.0 zmq cython; do pip3 install $x -v; done
+            for x in setuptools wheel intel-numpy intel-scipy psycopg2-binary matplotlib astropy photutils==1.0.0 zmq cython; do pip3 install $x -v; done
+            rm -Rf /root/.cache/pip
+      - run:
+         name: fitsio
+         command: |
+            pip3 install -v fitsio==1.1.1 -v
             rm -Rf /root/.cache/pip
       - run:
           name: Dust maps
