docker: mpi4py master version; mpi4py branch of legacypipe; vanilla qdo

--- a/docker-nersc/Dockerfile
+++ b/docker-nersc/Dockerfile
@@ -71,8 +71,7 @@ RUN wget -nv https://www.mpich.org/static/downloads/3.3/mpich-3.3.tar.gz \
 
 # mpi4py / mpicc can't handle -ax=knl
 ENV CFLAGS -O3 -g -fPIC -std=gnu99 -pthread
-RUN wget -nv https://github.com/mpi4py/mpi4py/archive/master.zip \
-         && unzip master.zip \
+RUN git clone https://github.com/mpi4py/mpi4py.git \
          && (cd mpi4py \
          && python setup.py build \
          && python setup.py install) \
@@ -235,11 +234,11 @@ RUN python -O -m compileall \
     /src/legacypipe/py/{legacypipe,legacyzpts}
 
 # update legacypipe
-RUN cd /src/legacypipe && git pull && git checkout DR9.6.7 && git describe && echo 967 && \
+RUN cd /src/legacypipe && git pull && git checkout mpi4py && git describe && \
   python    -m compileall /src/legacypipe/py/{legacypipe,legacyzpts} && \
   python -O -m compileall /src/legacypipe/py/{legacypipe,legacyzpts}
 
-# QDO
-RUN cd qdo && git remote add dstn https://bitbucket.org/dstn/qdo.git \
-    && git fetch dstn && git checkout handle-oom \
-    && pip install . && echo 3 #python3 setup.py install
+# # QDO
+# RUN cd qdo && git remote add dstn https://bitbucket.org/dstn/qdo.git \
+#     && git fetch dstn && git checkout handle-oom \
+#     && pip install . && echo 3 #python3 setup.py install
