--- a/docker-nersc/Dockerfile
+++ b/docker-nersc/Dockerfile
@@ -214,7 +214,7 @@ RUN echo "export PS1='[container] \\u@\\h:\\w$ '" >> $HOME/.bashrc \
   && python -c "from astropy.coordinates import EarthLocation, SkyCoord, AltAz; from astropy.time import Time; print(EarthLocation.of_site('ctio')); print(SkyCoord(180.,-45.,unit='deg').transform_to(AltAz(obstime=Time(56806.0, format='mjd'), location=EarthLocation.of_site('ctio'))))" \
   # Download astropy IERS leap-second list
   && python -c "from astropy.time import Time; Time.now()" \
-  # Make config files readable!?!!
+  # Make astropy cache files readable!?!!
   && chmod -R a+rwX $HOME/.astropy
   
 # Curses upon you, astropy
@@ -236,7 +236,7 @@ RUN python -O -m compileall \
     /src/legacypipe/py/{legacypipe,legacyzpts}
 
 # update legacypipe
-RUN cd /src/legacypipe && git pull && git checkout mpi4py && git describe && \
+RUN cd /src/legacypipe && git pull && git describe && \
   python    -m compileall /src/legacypipe/py/{legacypipe,legacyzpts} && \
   python -O -m compileall /src/legacypipe/py/{legacypipe,legacyzpts}
 
