--- a/docker-nersc/Dockerfile
+++ b/docker-nersc/Dockerfile
@@ -103,7 +103,7 @@ RUN git clone http://github.com/dstndstn/astrometry.net.git astrometry \
     && make install INSTALL_DIR=/usr/local \
     && make clean \
     && (cd && PYTHONPATH=/usr/local/lib/python python3 -c "import astrometry; print(astrometry.__version__)") \
-    && git describe && echo 0.84
+    && git describe && echo 0.85
 
 # Pip installs -- binary.  We need cython for the tractor.
 RUN for x in \
@@ -119,7 +119,7 @@ RUN for x in \
 # The Tractor
 RUN git clone http://github.com/dstndstn/tractor.git tractor \
     && cd tractor \
-    && git checkout dr9.5 \
+    && git checkout dr9.6 \
     && python3 setup-cython.py --with-ceres install --home /usr/local \
     && make version && cp tractor/version.py /usr/local/lib/python/tractor/ \
     && rm -R $(find . -name "*.o" -o -name "*.so") \
@@ -127,7 +127,7 @@ RUN git clone http://github.com/dstndstn/tractor.git tractor \
 
 # Pip installs -- built from source
 RUN pip --no-cache-dir install photutils
-RUN pip --no-cache-dir install fitsio==1.1.2
+RUN pip --no-cache-dir install fitsio==1.1.4
 
 RUN /sbin/ldconfig
 
@@ -261,11 +261,11 @@ RUN python -O -m compileall \
     /src/unwise_psf/py \
     /src/legacypipe/py/{legacypipe,legacyzpts}
 
-# update legacypipe
-RUN cd /src/legacypipe && git pull \   
-    && git describe && echo DR9.7.0 && \
-  python    -m compileall /src/legacypipe/py/{legacypipe,legacyzpts} && \
-  python -O -m compileall /src/legacypipe/py/{legacypipe,legacyzpts}
+# # update legacypipe
+# RUN cd /src/legacypipe && git pull \   
+#     && git describe && echo DR9.7.1 && \
+#   python    -m compileall /src/legacypipe/py/{legacypipe,legacyzpts} && \
+#   python -O -m compileall /src/legacypipe/py/{legacypipe,legacyzpts}
 
 ENV LEGACYPIPE_DIR /src/legacypipe/py
 
