--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,11 @@ jobs:
               python3.7 -c "import sys; print(sys.path)"
               python3.7 -c "import sys; import os; os.system('ls {' + ','.join(sys.path) + '}')"
               git clone https://github.com/legacysurvey/legacypipe-test-data.git
-              export LEGACYPIPE_TEST_DIR=$(pwd)/legacypipe-test-data
+              export LPT=$(pwd)/legacypipe-test-data
+              export LEGACYPIPE_TEST_DATA=$LPT
+              export GAIA_CAT_DIR=$LPT/gaia-dr2
+              export GAIA_CAT_VER=2
+              export PS1CAT_DIR=$LPT/ps1-qz-star-v3
               coverage run --concurrency=multiprocessing test/runbrick_test.py psfex ceres
               coverage run --concurrency=multiprocessing -a test/unit_tests.py
               coverage run --concurrency=multiprocessing -a test/legacyzpts_test.py
