--- a/py/.coveragerc
+++ b/py/.coveragerc
@@ -15,7 +15,7 @@ branch = True
 # include = 
 # omit =
 #source = legacypipe
-include = legacypipe/*
+include = legacypipe/* legacyzpts/*
 omit = /usr/local/pipped/lib/python/*
 
 [report]
