oops, wrong format in coveragerc multi-string

--- a/py/.coveragerc
+++ b/py/.coveragerc
@@ -15,7 +15,9 @@ branch = True
 # include = 
 # omit =
 #source = legacypipe
-include = legacypipe/* legacyzpts/*
+include =
+    legacypipe/*
+    legacyzpts/*
 omit = /usr/local/pipped/lib/python/*
 
 [report]
