attempt to build LSST software stack on top of an Intel conda environment (should be compatible with legacypipe stack)

--- a/docker-nersc-lsst/Dockerfile
+++ b/docker-nersc-lsst/Dockerfile
@@ -1,9 +1,10 @@
 FROM registry.services.nersc.gov/nersc/intel_cxx_fort_mpi_mkl_devel as builder
 
-RUN apt -y update && apt install -y apt-utils && echo 3
+RUN apt -y update && apt install -y apt-utils
 
 RUN DEBIAN_FRONTEND=noninteractive \
     apt install -y --no-install-recommends \
+    build-essential \
     make \
     git \
     file \
@@ -11,6 +12,9 @@ RUN DEBIAN_FRONTEND=noninteractive \
     wget \
     swig \
     netpbm \
+    sed \
+    grep \
+    less \
     wcslib-dev \
     wcslib-tools \
     zlib1g-dev \
@@ -28,15 +32,91 @@ RUN DEBIAN_FRONTEND=noninteractive \
     # Remove APT files
     && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN echo 'PATH=/opt/conda/bin:$PATH' > /etc/profile.d/conda.sh
+RUN echo 'PATH=/opt/conda/bin:$PATH' > /etc/profile.d/conda.sh \
+    && chmod 755 /etc/profile.d/conda.sh
 
 RUN wget -nv https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh && \
     bash miniconda.sh -b -p /opt/conda && \
     conda config --add channels intel && \
     conda config --set always_yes yes && \
     conda update conda && \
-    conda install python=3.7 pip numpy scipy && \
+    conda create -n myenv python=3.8 pip numpy scipy && \
     conda clean -a -y
+
+    #conda install python=3.8 pip numpy scipy && \
+
+# LSST
+FROM builder as lsst
+
+RUN mkdir lsst_stack
+WORKDIR lsst_stack
+
+# Tell bash to run this startup file for all shells (interactive, non-interactive, etc)
+# This already seems to be the default.
+ENV BASH_ENV=/etc/bash.bashrc
+
+COPY myenv.sh /etc/profile.d
+RUN chmod 755 /etc/profile.d/myenv.sh
+
+RUN echo $PATH && which sed
+
+RUN conda config --add channels conda-forge && \
+    conda install rubin-env=0.6.0
+
+RUN conda install eups
+
+# ENV EUPS_PATH=/opt/conda/share/eups
+# ENV PATH=${PATH}:/opt/conda/eups/bin
+# ENV EUPS_SHELL=/bin/bash
+# ENV EUPS_PKGROOT=https://eups.lsst.codes/stack/src
+# ENV PYTHONPATH=${PYTHONPATH}:/opt/conda/eups/python
+# RUN mkdir /opt/lsst
+# ENV EUPS_DIR=/opt/lsst
+# RUN mkdir $EUPS_DIR/bin && cp /opt/conda/eups/bin/setups.sh $EUPS_DIR/bin
+# 
+# RUN eups distrib install -t v22_0_1 afw
+
+#ENV LSST_CONDA_ENV_NAME=base
+
+ENV LSST_CONDA_ENV_NAME=myenv
+ENV LSST_CONDA_CHANNELS="intel conda-forge"
+
+RUN conda list && \
+    curl -OL https://raw.githubusercontent.com/lsst/lsst/tickets/DM-31235/scripts/newinstall.sh && \
+    chmod 755 newinstall.sh && \
+    bash newinstall.sh -b -T -P /opt/conda
+
+#curl -OL https://raw.githubusercontent.com/lsst/lsst/master/scripts/newinstall.sh && \
+
+#RUN mv /etc/profile.d/myenv.sh /etc/profile.d/10_myenv.sh
+
+# RUN rm /etc/profile.d/myenv.sh /etc/profile.d/conda.sh && \
+#     echo "source /root/lsst_stack/loadLSST.bash" > /etc/profile.d/20_lsst.sh && \
+#     chmod 755 /etc/profile.d/20_lsst.sh
+
+ENV EUPS_SHELL=bash
+
+RUN rm /etc/profile.d/myenv.sh /etc/profile.d/conda.sh
+
+RUN source /root/lsst_stack/loadLSST.bash && eups distrib install -t v22_0_1 sconsUtils
+RUN source /root/lsst_stack/loadLSST.bash && eups distrib install -t v22_0_1 astshim
+RUN source /root/lsst_stack/loadLSST.bash && eups distrib install -t v22_0_1 base
+RUN source /root/lsst_stack/loadLSST.bash && eups distrib install -t v22_0_1 sphgeom
+RUN source /root/lsst_stack/loadLSST.bash && eups distrib install -t v22_0_1 pex_exceptions
+RUN source /root/lsst_stack/loadLSST.bash && eups distrib install -t v22_0_1 utils
+
+#RUN source /root/lsst_stack/loadLSST.bash && eups distrib install -t v22_0_1 afw
+
+
+#ENV LSST_CONDA_CHANNELS=
+#COPY newinstall.sh .
+#RUN chmod 755 newinstall.sh && \
+#   ./newinstall.sh -n -b -t -P /opt/conda
+#RUN echo "source $HOME/lsst_stack/loadLSST.bash" > /etc/profile.d/lsst.sh
+
+
+
+FROM builder as legacypipe
 
 # ugly: Tractor's mp_fourier module detects the $CC='icc' exactly
 # These are in /opt/intel/bin, which is on the PATH.
