--- a/.circleci/circleci-build-ubuntu21.10/Dockerfile
+++ b/.circleci/circleci-build-ubuntu21.10/Dockerfile
@@ -1,7 +1,16 @@
 FROM ubuntu:21.10
 
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt -y update && apt install -y apt-utils && \
+
+# # https://medium.com/nttlabs/ubuntu-21-10-and-fedora-35-do-not-work-on-docker-20-10-9-1cd439d9921
+# #ADD https://github.com/AkihiroSuda/clone3-workaround/releases/download/v1.0.0/clone3-workaround.x86_64 /clone3-workaround
+# COPY clone3-workaround.x86_64 /clone3-workaround
+# RUN chmod 755 /clone3-workaround
+# SHELL ["/clone3-workaround", "/bin/sh", "-c"]
+
+RUN apt install -y gpgv
+
+RUN apt -y update && apt install -y apt-utils gpgv && \
     apt install -y --no-install-recommends \
     build-essential \
     make \
